# big-oh-no

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  codeql.yml  release.yml
python/: CHANGELOG.md  README.md  cli.py  linus_sort.py  pyproject.toml  stalin_sort.py  utils.py  wait_sort.py
python/big_oh_no/: bogo_sort.py  cli.py  darwin_sort.py  digit_sort.py  evolution_sort.py  linus_sort.py  schrodinger_sort.py  stalin_sort.py  urinal_sort.py  vibe_sort.py  visualizer.py  wait_sort.py
python/tests/: conftest.py  test_algorithms.py  test_cli.py  test_validation.py  test_visualizer.py
rust/: Cargo.toml
rust/src/: main.rs
