[project]
name = "big-oh-no"
version = "0.1.0"
description = "A collection of utterly useless yet entertaining sorting algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
big-oh-no = "cli:main"
