[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "big-oh-no"
version = "0.1.0"
description = "A collection of utterly useless yet entertaining sorting algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "numpy>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
big-oh-no = "big_oh_no.cli:main"

[tool.setuptools.packages.find]
include = ["big_oh_no*"]
