[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "big-oh-no"
version = "0.1.0"
description = "A collection of utterly useless yet entertaining sorting algorithms"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Manifold Labs", email = "neel@manifoldlabs.co.nz" },
]
keywords = ["sorting", "algorithms", "cli", "fun", "bogosort", "humor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "numpy>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "scipy>=1.13",
]

[project.urls]
Homepage = "https://github.com/manifoldlabslimited/big-oh-no"
Repository = "https://github.com/manifoldlabslimited/big-oh-no"
Issues = "https://github.com/manifoldlabslimited/big-oh-no/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
big-oh-no = "big_oh_no.cli:main"

[tool.setuptools.packages.find]
include = ["big_oh_no*"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
